# Climate_Change

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  config.py  forest.ipynb  initial.ipynb  main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yml  space-keepalive.yml
app/: manage.py
app/climate_dashboard/: settings.py  urls.py  wsgi.py
app/dashboard/: views.py
app/dashboard/templates/dashboard/: index.html
django/climate_dashboard/: settings.py
django/dashboard/: urls.py  views.py
notebooks/: carbon_dioxide.ipynb  forest_loss_analysis.ipynb  initial.ipynb  main.ipynb
output/: (Globe)GlobalLandTemperaturesByCity.html  (Globe)GlobalLandTemperaturesByCountry.html  (Map)GlobalLandTemperaturesByCity.html  (Map)GlobalLandTemperaturesByCountry.html  GlobalLandTemperaturesByCity.html
src/: config.py  setup_env.py  utils.py  visualization.py
