[project]
name = "climate-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api==0.1.370",
    "folium>=0.17.0",
    "geemap==0.29.6",
    "ipykernel>=7.2.0",
    "ipython<8",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "python-box>=7.0.0",
    "python-dotenv>=1.2.1",
    "setuptools<70",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
    "tqdm>=4.67.3",
    "xyzservices==2023.10.1",
]
